<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pos.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Home Dashboard -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_tableList"
            app:destination="@id/nav_table_list" />
        <action
            android:id="@+id/action_home_to_inventory"
            app:destination="@id/nav_inventory" />
        <action
            android:id="@+id/action_home_to_reports"
            app:destination="@id/nav_reports" />
    </fragment>

    <!-- Table List (entry point for Order workflow) -->
    <fragment
        android:id="@+id/nav_table_list"
        android:name="com.example.pos.ui.order.TableListFragment"
        android:label="@string/menu_tables"
        tools:layout="@layout/fragment_table_list">
        <action
            android:id="@+id/action_tableList_to_order"
            app:destination="@id/nav_order" />
    </fragment>

    <!-- Product Order (after selecting a table) -->
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.pos.ui.order.OrderFragment"
        android:label="Order"
        tools:layout="@layout/fragment_order">
        <argument
            android:name="tableId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="tableName"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- Inventory / Menu -->
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.pos.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />

    <!-- Sales Reports -->
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.pos.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

</navigation>